--- a/module2_solution/css/index.css
+++ b/module2_solution/css/index.css
@@ -1,39 +1,47 @@
 * {
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
-}
-.box {
-  width: 95%;
-  height: 150px;
-  background-color: grey;
-  border: 5px solid black;
-  border-radius: 10px; 
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
+    box-sizing: border-box;
+    font-family: Helvetica;
 }
 
-.box p{
-  color: white;
-  font-familiy: Arial, Helvetica, sans-serif;
-  font-size: 0.7em;
-  
+body {
+    background-color: #d6d6d6;
 }
 
-.header {
-  position: absoulte;
-  top: 10px;
-  right: inherit;
-  background-color: blue;
-  padding: 10px;
-  width: 100px;
-  text-align: center;
-  color: white;
-  border: 2px solid black;
-  border-radius: 5px;
+h1 {
+    text-align: center;
+    color: black;
 }
 
+section {
+    border: 1px solid black;
+    background-color: #b5c4d2;
+    margin: 10px;
+}
+
+section h2 {
+    float: right;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    margin: 0;
+    width: 230px;
+    text-align: center;
+    font-style: Times;
+    font-size: 24px;
+    font-weight: bold;
+    height: 45px;
+    padding-top: 10px;
+}
+
+section h2 {
+    background-color: red;
+}
+
+
+section>p {
+    padding: 40px 15px 15px 15px;
+}
+
+/* media queries */
 .row {
   width: 100%;
 }
